# webscraping_jd

./: README.md
cl_01/: pyproject.toml
cl_01/src/: get_my_ip.py  ml_search.py
