[project]
name = "cl-01"
version = "0.1.0"
description = ""
authors = [
    {name = "ramiromanoel",email = "ramiro.junior1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "selenium (>=4.38.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
